# projeto-django

./: Procfile  db.sqlite3  manage.py  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
whatabook_django/: settings.py  urls.py  wsgi.py
whatabookdjango/: asgi.py
