[tool.poetry]
name = "WhatABook-Django"
version = "0.1.0"
description = "WhatABook - Projeto Integrador - João Almeida, Gabriel Alves e Yasmin Marcelino"
authors = ["EuAlmeida <jvda.vitor.almeida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
